--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <link rel="stylesheet" href="css/button.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#" class="menu-item">หน้าแรก</a></li>
-            <li><a href="#" class="menu-item" id="active" >สินค้า</a></li>
-            <li><a href="#" class="menu-item">เกี่ยวกับเรา</a></li>
-            <li><a href="#" class="menu-item">ติดต่อ</a></li>
-        </ul>
-    </nav>
+    <div class="stats-container">
+        <div class="stat-box">
+            <div class="stat-number">1,234</div>
+            <div class="stat-label">ผู้ใช้งาน</div>
+        </div>
+        <div class="stat-box">
+            <div class="stat-number">5.6K</div>
+            <div class="stat-label">ยอดขาย</div>
+        </div>
+        <div class="stat-box">
+            <div class="stat-number">98%</div>
+            <div class="stat-label">ความพึงพอใจ</div>
+        </div>
+    </div>
 </body>
 </html>
